--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.security:spring-security-crypto'  // BCrypt 등 암호화만
+    implementation 'org.springframework.boot:spring-boot-starter-validation' // @Valid, @NotBlank 등
+
 }
 
 tasks.named('test') {
